updated templates in frontend

--- a/frontend/templates/includes/django-material-kit/navigation-transparent.html
+++ b/frontend/templates/includes/django-material-kit/navigation-transparent.html
@@ -91,7 +91,7 @@
                     </a>
                   </li>
                   <li class="nav-item dropdown dropdown-hover dropdown-subitem">
-                    <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/publications.html">
+                    <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/metadata-standards.html">
                       <div class="w-100 d-flex align-items-center justify-content-between">
                         <div>
                           <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Standards</h6>
