updated frontend templates

--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -123,7 +123,8 @@
                   <div class="card-body ps-lg-0">
                     <h5 class="mb-0">Melissa Kimble</h5>
                     <h6 class="text-info">Data Engineer</h6>
-                    <p class="mb-0">Interdisciplinary work on spatial data science and data engineering.</p>
+                    <p class="mb-0">Interdisciplinary work on spatial data science and engineering, particularly on
+                      integration of spatiotemporal data and uncertainty characterization.</p>
                   </div>
                 </div>
               </div>
@@ -165,7 +166,8 @@
                   <div class="card-body ps-lg-0">
                     <h5 class="mb-0">Dr. Benjamin King</h5>
                     <h6 class="text-info">Assistant Professor of Bioinformatics</h6>
-                    <p class="mb-0">Utilizing genomic and computational approaches to understand the mechanisms of stress responses.</p>
+                    <p class="mb-0">Utilizing genomic and computational approaches to understand the mechanisms of stress
+                      responses.</p>
                   </div>
                 </div>
               </div>
@@ -185,7 +187,8 @@
                   <div class="card-body ps-lg-0">
                     <h5 class="mb-0">Dr. Laura Jackson</h5>
                     <h6 class="text-info">Integrative Data Scientist</h6>
-                    <p class="mb-0">.</p>
+                    <p class="mb-0">Large-scale computation approaches to understand trait evolution in fishes with a
+                      focus on questions at the intersection of evolutionary and developmental biology.</p>
                   </div>
                 </div>
               </div>
