--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -122,7 +122,7 @@
                 <div class="col-lg-8 col-md-6 col-12 my-auto">
                   <div class="card-body ps-lg-0">
                     <h5 class="mb-0">Melissa Kimble</h5>
-                    <h6 class="text-info">Data Engineer</h6>
+                    <h6 class="text-info">Data Engineer, Graduate Student, University of Maine</h6>
                     <p class="mb-0">Interdisciplinary work on spatial data science and engineering, particularly on
                       integration of spatiotemporal data and uncertainty characterization.</p>
                   </div>
@@ -143,7 +143,7 @@
                 <div class="col-lg-8 col-md-6 col-12 my-auto">
                   <div class="card-body ps-lg-0">
                     <h5 class="mb-0">Dr. Kate Beard-Tisdale</h5>
-                    <h6 class="text-info">Professor of Spatial Computing</h6>
+                    <h6 class="text-info">Professor of Spatial Computing, University of Maine</h6>
                     <p class="mb-0">Modeling, analysis and visualization of spatio-temporal phenomena.</p>
                   </div>
                 </div>
@@ -165,7 +165,7 @@
                 <div class="col-lg-8 col-md-6 col-12 my-auto">
                   <div class="card-body ps-lg-0">
                     <h5 class="mb-0">Dr. Benjamin King</h5>
-                    <h6 class="text-info">Assistant Professor of Bioinformatics</h6>
+                    <h6 class="text-info">Assistant Professor of Bioinformatics, University of Maine</h6>
                     <p class="mb-0">Utilizing genomic and computational approaches to understand the mechanisms of stress
                       responses.</p>
                   </div>
@@ -186,7 +186,7 @@
                 <div class="col-lg-8 col-md-6 col-12 my-auto">
                   <div class="card-body ps-lg-0">
                     <h5 class="mb-0">Dr. Laura Jackson</h5>
-                    <h6 class="text-info">Integrative Data Scientist</h6>
+                    <h6 class="text-info">Integrative Data Scientist, Advanced Research Computing, Security, and Information Management (ARCSIM)</h6>
                     <p class="mb-0">Large-scale computation approaches to understand trait evolution in fishes with a
                       focus on questions at the intersection of evolutionary and developmental biology.</p>
                   </div>
@@ -209,7 +209,7 @@
                 <div class="col-lg-8 col-md-6 col-12 my-auto">
                   <div class="card-body ps-lg-0">
                     <h5 class="mb-0">Dr. Chaofan Chen</h5>
-                    <h6 class="text-info">Assistant Professor of Computer Science</h6>
+                    <h6 class="text-info">Assistant Professor of Computer Science, University of Maine</h6>
                     <p class="mb-0">Techniques to enhance the interpretability and transparency of
                       machine learning models, especially deep learning models.</p>
                   </div>
@@ -252,8 +252,8 @@
                 <div class="col-lg-8 col-md-6 col-12 my-auto">
                   <div class="card-body ps-lg-0">
                     <h5 class="mb-0">Samantha Silverbrand</h5>
-                    <h6 class="text-info">Laboratory ...</h6>
-                    <p class="mb-0">.</p>
+                    <h6 class="text-info">Fish Biologist, U.S. Fish and Wildlife</h6>
+                    <p class="mb-0">eDNA, genetics, and marine biology.</p>
                   </div>
                 </div>
               </div>
@@ -272,7 +272,7 @@
                 <div class="col-lg-8 col-md-6 col-12 my-auto">
                   <div class="card-body ps-lg-0">
                     <h5 class="mb-0">Keijaoh Campbell</h5>
-                    <h6 class="text-info">Computer Scientist</h6>
+                    <h6 class="text-info">Computer Technician II, University of Maine</h6>
                     <p class="mb-0">Machine learning applications.</p>
                   </div>
                 </div>
@@ -294,7 +294,7 @@
                 <div class="col-lg-8 col-md-6 col-12 my-auto">
                   <div class="card-body ps-lg-0">
                     <h5 class="mb-0">Steven Allers</h5>
-                    <h6 class="text-info">Graduate Student</h6>
+                    <h6 class="text-info">Graduate Student, University of Maine</h6>
                     <p class="mb-0">.</p>
                   </div>
                 </div>
