updated frontend templates

--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -295,7 +295,7 @@
                   <div class="card-body ps-lg-0">
                     <h5 class="mb-0">Steven Allers</h5>
                     <h6 class="text-info">Graduate Student, University of Maine</h6>
-                    <p class="mb-0">.</p>
+                    <p class="mb-0">Bioinformatics, networks, and artificial intelligence.</p>
                   </div>
                 </div>
               </div>
