--- a/frontend/templates/home/django-material-kit/metadata-standards.html
+++ b/frontend/templates/home/django-material-kit/metadata-standards.html
@@ -33,11 +33,11 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-12 my-auto">
-            <h3>About us</h3>
+            <h3>Standards to be used for data and metadata format and content</h3>
             <p class="pe-md-5 mb-4">
               While several metadata standards are applicable to different project data types, recent studies1,2 recommend
               use of the Genomic Standards Consortium’s (GSC) ‘Minimum information about a marker gene sequence’ MIMARKS,
-              Minimum Information about any (x) Sequence (MIxS - metadata template applicable to sequence data) and Darwin
+              Minimum Information about any (x) Sequence (<a href="https://github.com/GenomicsStandardsConsortium/mixs">MIxS - metadata template applicable to sequence data</a>) and Darwin
               Core metadata standardsThe GSC in addition to the minimum information checklists includes
               environmental packages. We propose to use these checklists and packages for documenting markers,
               sequences and sample sites. MIMARKS incorporates standards being developed by the Consortium for
@@ -51,14 +51,14 @@
               variables as pertinent to the specific project. Detailed procedures and methodological approaches,
               deviations from protocols, specific equipment, and chemical reagents utilized for this project will be
               documented.  <br>
-              <a href="https://umaine.edu/edna/" class="text-info icon-move-right">More about Maine-eDNA
+              <a href="https://gensc.org/" class="text-info icon-move-right">More about the Genomic Standards Consortium (GSC)
                 <i class="fas fa-arrow-right text-sm ms-1"></i>
               </a>
             </p>
           </div>
           <div class="col-md-4 col-12 my-auto">
             <a target="_blank" href="https://github.com/Maine-eDNA/medna-metadata">
-              <img class="w-100 border-radius-lg shadow-lg" src="{% static 'assets/img/logo-medna-metadata.png' %}" alt="medna-metadata logo">
+              <img class="w-100 border-radius-lg shadow-lg" src="{% static 'assets/img/logos/logo-gsc-sq.png' %}" alt="genomic standards consortium logo">
             </a>
           </div>
           </div>
