updated frontend templates

--- a/frontend/templates/home/django-material-kit/metadata-standards.html
+++ b/frontend/templates/home/django-material-kit/metadata-standards.html
@@ -35,7 +35,7 @@
               <div class="col-md-8 col-12 my-auto">
                 <h3>Standards to be used for data and metadata format and content</h3>
                 <p class="pe-md-5 mb-4">
-                  While several metadata standards are applicable to different project data types, recent studies1,2 recommend
+                  While several metadata standards are applicable to different project data types, recent studies<sup>1,2</sup> recommend
                   use of the Genomic Standards Consortium’s (GSC) ‘Minimum information about a marker gene sequence’ MIMARKS,
                   Minimum Information about any (x) Sequence (<a href="https://github.com/GenomicsStandardsConsortium/mixs">MIxS - metadata template applicable to sequence data</a>) and Darwin
                   Core metadata standardsThe GSC in addition to the minimum information checklists includes
@@ -64,6 +64,16 @@
               </div>
           </div>
         </section>
+        <div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
+          <div class="container">
+            <div class="section text-center">
+              <p class="pe-md-5 mb-4">
+                <sup>1</sup>Tedersoo, L., Ramirez, K. S., Nilsson, R. H., Kaljuvee, A., Kõljalg, U., & Abarenkov, K. (2015). Standardizing metadata and taxonomic identification in metabarcoding studies. GigaScience, 4(1), 34. https://doi.org/10.1186/s13742-015-0074-5 <br>
+                <sup>2</sup>Yilmaz, P., Kottmann, R., Field, D., Knight, R., Cole, J. R., Amaral-Zettler, L., Gilbert, J. A., Karsch-Mizrachi, I., Johnston, A., Cochrane, G., Vaughan, R., Hunter, C., Park, J., Morrison, N., Rocca-Serra, P., Sterk, P., Arumugam, M., Bailey, M., Baumgartner, L., … Glöckner, F. O. (2011). Minimum information about a marker gene sequence (MIMARKS) and minimum information about any (x) sequence (MIxS) specifications. Nature Biotechnology, 29(5), 415–420. https://doi.org/10.1038/nbt.1823
+              </p>
+            </div>
+          </div>
+        </div>
       <!-- END about-us image & text & info -->
       </div>
     </div>
