updated frontend templates

--- a/frontend/templates/home/django-material-kit/metadata-standards.html
+++ b/frontend/templates/home/django-material-kit/metadata-standards.html
@@ -66,7 +66,7 @@
         </section>
         <div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
           <div class="container">
-            <div class="section text-center">
+            <div class="section">
               <p class="pe-md-5 mb-4">
                 <sup>1</sup>Tedersoo, L., Ramirez, K. S., Nilsson, R. H., Kaljuvee, A., Kõljalg, U., & Abarenkov, K. (2015). Standardizing metadata and taxonomic identification in metabarcoding studies. GigaScience, 4(1), 34. https://doi.org/10.1186/s13742-015-0074-5 <br>
                 <sup>2</sup>Yilmaz, P., Kottmann, R., Field, D., Knight, R., Cole, J. R., Amaral-Zettler, L., Gilbert, J. A., Karsch-Mizrachi, I., Johnston, A., Cochrane, G., Vaughan, R., Hunter, C., Park, J., Morrison, N., Rocca-Serra, P., Sterk, P., Arumugam, M., Bailey, M., Baumgartner, L., … Glöckner, F. O. (2011). Minimum information about a marker gene sequence (MIMARKS) and minimum information about any (x) sequence (MIxS) specifications. Nature Biotechnology, 29(5), 415–420. https://doi.org/10.1038/nbt.1823
