updated frontend templates

--- a/frontend/templates/home/django-material-kit/metadata-standards.html
+++ b/frontend/templates/home/django-material-kit/metadata-standards.html
@@ -36,7 +36,8 @@
                 <h3>Standards used for data and metadata format and content</h3>
                 <figure>
                   <p class="pe-md-5 mb-4">
-                    While several metadata standards are applicable to different project data types, recent studies<sup>1,2</sup>
+                    While several metadata standards are applicable to different project data types,
+                    recent studies<sup><a href="https://doi.org/10.1186/s13742-015-0074-5">1</a>,<a href="https://doi.org/10.1038/nbt.1823">2</a></sup>
                     recommend use of the Genomic Standards Consortium’s (GSC) ‘Minimum information about a marker gene
                     sequence’ MIMARKS, Minimum Information about any (x) Sequence
                     (<a href="https://github.com/GenomicsStandardsConsortium/mixs">MIxS - metadata template applicable to
