--- a/frontend/templates/home/django-material-kit/metadata-standards.html
+++ b/frontend/templates/home/django-material-kit/metadata-standards.html
@@ -38,22 +38,23 @@
                   <p class="pe-md-5 mb-4">
                     While several metadata standards are applicable to different project data types,
                     recent studies<sup><a href="https://doi.org/10.1186/s13742-015-0074-5">1</a>,<a href="https://doi.org/10.1038/nbt.1823">2</a></sup>
-                    recommend use of the Genomic Standards Consortium’s (GSC) ‘Minimum information about a marker gene
+                    recommend the use of the Genomic Standards Consortium’s (GSC) ‘Minimum information about a marker gene
                     sequence’ MIMARKS, Minimum Information about any (x) Sequence
                     (<a href="https://github.com/GenomicsStandardsConsortium/mixs">MIxS - metadata template applicable to
-                    sequence data</a>) and Darwin Core metadata standardsThe GSC in addition to the minimum information
-                    checklists includes environmental packages. We propose to use these checklists and packages for
-                    documenting markers, sequences and sample sites. MIMARKS incorporates standards being developed by the
-                    Consortium for the Barcode of Life (CBOL), thus the checklist can be universally applied to any marker
-                    gene, from small subunit rRNA to cytochrome oxidase I (COI), to all taxa, and to studies ranging from
-                    single individuals to complex communities. The metadata for sample sites will include a unique
-                    identifier, a GPS designated location, and a qualitative habitat characterization. Metadata for each
-                    sample will include date and time, collector, processing steps that include filters applied, primers
-                    applied, and documentation of controls. Environmental contextual data for each sample obtained at the
-                    time of sample collection will include measurements on water temperature, pH, dissolved oxygen,
-                    turbidity, and salinity, with possible additional variables as pertinent to the specific project.
-                    Detailed procedures and methodological approaches, deviations from protocols, specific equipment, and
-                    chemical reagents utilized for this project will be documented.  <br>
+                    sequence data</a>) and Darwin Core metadata standards. In addition to the minimum information
+                    checklists, MIxS includes environmental packages. We used these checklists and environmental
+                    packages for documenting markers, sequences, and field collection sites. MIMARKS incorporates
+                    standards being developed by the Consortium for the Barcode of Life (CBOL), thus the checklist can
+                    be universally applied to any marker gene, from small subunit rRNA to cytochrome oxidase I (COI), to
+                    all taxa, and to studies ranging from single individuals to complex communities. The metadata for
+                    field collection sites includes a unique identifier, a GPS designated location, and a qualitative
+                    habitat characterization. Metadata for each field collection includes date and time, collector,
+                    processing steps that include filters applied, primers applied, and documentation of controls.
+                    Environmental contextual data for each sample obtained at the time of sample collection can include
+                    measurements on water temperature, pH, dissolved oxygen, turbidity, and salinity, with possible
+                    additional variables as pertinent to the specific project. Detailed procedures and methodological
+                    approaches, deviations from protocols, specific equipment, and chemical reagents utilized for this
+                    project are documented. <br>
                   </p>
                   <figcaption class="blockquote-footer ps-3">Metadata Standards in <cite title="Maine-eDNA Data Management Plan">Maine-eDNA Data Management Plan</cite></figcaption>
                   <a href="https://gensc.org/" class="text-info icon-move-right">More about the Genomic Standards Consortium (GSC)
