--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -273,7 +273,7 @@
                   <div class="card-body ps-lg-0">
                     <h5 class="mb-0">Keijaoh Campbell</h5>
                     <h6 class="text-info">Computer Technician II, University of Maine</h6>
-                    <p class="mb-0">Machine learning applications.</p>
+                    <p class="mb-0">Artificial intelligence, particularly applications in computer vision.</p>
                   </div>
                 </div>
               </div>
