--- a/frontend/templates/home/django-material-kit/projects.html
+++ b/frontend/templates/home/django-material-kit/projects.html
@@ -32,8 +32,8 @@
         <section class="py-9">
           <div class="container">
             <!-- -------- START loop -------- -->
-
-                {% for project in projects_list %}
+            {% if project_list %}
+                {% for project in project_list %}
                     <h3>{{ project.project_label }}</h3>
                     <div class="row">
                         <div class="col">
@@ -49,7 +49,9 @@
                     <div class="w-100"></div>
                     </div>
                 {% endfor %}
-
+              {% else %}
+                <p class="lead">No projects are available.</p>
+            {% endif %}
             <!-- -------- END loop -------- -->
           </div>
         </section>
