updated frontend templates

--- a/frontend/templates/home/django-material-kit/projects.html
+++ b/frontend/templates/home/django-material-kit/projects.html
@@ -50,8 +50,10 @@
                     </div>
                 {% endfor %}
               {% else %}
-                <p class="lead">No projects are available.</p>
-            {% endif %}
+              <div class="row">
+                  <p class="lead">No projects are available.</p>
+              </div>
+              {% endif %}
             <!-- -------- END loop -------- -->
           </div>
         </section>
