updated frontend templates

--- a/frontend/templates/home/django-material-kit/projects.html
+++ b/frontend/templates/home/django-material-kit/projects.html
@@ -1,5 +1,6 @@
 {% extends "layouts/django-material-kit/base.html" %}
 {% load static %}
+{% load project_list %}
 
 {% block title %} Projects {% endblock %}
 
