--- a/frontend/templates/home/django-material-kit/projects.html
+++ b/frontend/templates/home/django-material-kit/projects.html
@@ -39,12 +39,14 @@
                     <h3>{{ project.project_label }}</h3>
                     <div class="row">
                         <div class="col">
+                            <h4>Description</h4>
                             <p class="lead">
                             {{ project.project_description }}
                             </p>
                         </div>
                         {% if project.project_goals %}
                         <div class="col">
+                            <h4>Goals</h4>
                             <p class="lead">
                             {{ project.project_goals }}
                             </p>
