updated frontend templates

--- a/frontend/templates/home/django-material-kit/projects.html
+++ b/frontend/templates/home/django-material-kit/projects.html
@@ -39,15 +39,15 @@
                     <h3>{{ project.project_label }}</h3>
                     <div class="row">
                         <div class="col">
-                            <h4>Description</h4>
-                            <p class="lead">
+                            <h5 class="font-weight-bolder mt-3">Description</h5>
+                            <p class="pe-5">
                             {{ project.project_description }}
                             </p>
                         </div>
                         {% if project.project_goals %}
                         <div class="col">
-                            <h4>Goals</h4>
-                            <p class="lead">
+                            <h5 class="font-weight-bolder mt-3">Goals</h5>
+                            <p class="pe-5">
                             {{ project.project_goals }}
                             </p>
                         </div>
