updated frontend templates

--- a/frontend/templates/home/django-material-kit/project_detail.html
+++ b/frontend/templates/home/django-material-kit/project_detail.html
@@ -7,6 +7,7 @@
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/map.css' %}">
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css">
 {% endblock stylesheets %}
