--- a/frontend/templates/home/django-material-kit/project_detail.html
+++ b/frontend/templates/home/django-material-kit/project_detail.html
@@ -33,12 +33,13 @@
   </div>
   <div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
     <div class="container">
-      <div class="section text-start">
+      <div class="section text-center">
         <!-- -------- START Grids -------- -->
         <section class="py-9">
           <div class="container">
             <!-- -------- START loop -------- -->
             {% if markers %}
+              <h3>{{ project.project_label }}</h3>
               {{ markers|json_script:"markers-data" }}
               <div id="map"></div>
               {% else %}
