--- a/frontend/templates/home/django-material-kit/project_detail.html
+++ b/frontend/templates/home/django-material-kit/project_detail.html
@@ -26,7 +26,7 @@
       <div class="row">
         <div class="col-md-8 mx-auto">
           <div class="text-center">
-            <h1 class="text-white">Projects</h1>
+            <h1 class="text-white">{{ project.project_label }}</h1>
             <p class="lead mb-4 text-white opacity-8">Descriptions, field collections</p>
           </div>
         </div>
@@ -40,7 +40,7 @@
           <div class="container">
             <!-- -------- START loop -------- -->
             {% if markers %}
-              <h3>{{ project.project_label }}</h3>
+                <h5 class="font-weight-bolder mt-3">Description</h5>
                 <p class="pe-5 text-start">{{ project.project_description }}</p>
               {{ markers|json_script:"markers-data" }}
               <div id="map"></div>
