updated template in frontend

--- a/frontend/templates/home/django-material-kit/project_detail.html
+++ b/frontend/templates/home/django-material-kit/project_detail.html
@@ -40,8 +40,10 @@
           <div class="container">
             <!-- -------- START loop -------- -->
             {% if markers %}
+              {% if project.project_description %}
                 <h5 class="font-weight-bolder mt-3">Description</h5>
                 <p class="pe-5 text-start">{{ project.project_description }}</p>
+              {% endif %}
               {{ markers|json_script:"markers-data" }}
               <div id="map"></div>
               {% else %}
