updated template in frontend

--- a/frontend/templates/home/django-material-kit/projects.html
+++ b/frontend/templates/home/django-material-kit/projects.html
@@ -34,6 +34,8 @@
             <!-- -------- START loop -------- -->
             {% if project_list %}
                 {% for project in project_list %}
+                    {% if project.project_label == "Maine eDNA" %}
+                    {% endif %}
                     {% if project.project_description %}
                     <h3>{{ project.project_label }}</h3>
                     <a href="{% url 'project_detail' project.pk %}"><div class="row">
