--- a/frontend/templates/home/django-material-kit/publications.html
+++ b/frontend/templates/home/django-material-kit/publications.html
@@ -34,15 +34,15 @@
             {% if pub_list %}
                 {% for pub in pub_list %}
                     <h3>{{ pub.publication_title }}</h3>
-                    <a href="{% url 'project_detail' project.pk %}"><div class="row">
+                    <a href="{% url pub.publication_url %}"><div class="row">
                         <div class="col">
                             <h5 class="font-weight-bolder mt-3">URL</h5>
-                          <a href="{% url pub.publication_url %}"><p class="pe-5">{{ pub.publication_url }}</p></a>
+                          <p class="pe-5">{{ pub.publication_url }}</p>
                         </div>
                         {% if pub.project_names %}
                         <div class="col">
                             <h5 class="font-weight-bolder mt-3">Affiliated Projects</h5>
-                            <p class="pe-5">{{ pub.project_names }}</p>
+                            <p class="pe-5">{{ pub.project_names.project_label|join: ", " }}</p>
                         </div>
                         {% endif %}
                     <div class="w-100"></div>
