updated publication template in frontend

--- a/frontend/templates/home/django-material-kit/publications.html
+++ b/frontend/templates/home/django-material-kit/publications.html
@@ -34,7 +34,7 @@
             {% if pub_list %}
                 {% for pub in pub_list %}
                     <h3>{{ pub.publication_title }}</h3>
-                    <a href="{% url pub.publication_url %}"><div class="row">
+                    <div class="row">
                         <div class="col">
                             <h5 class="font-weight-bolder mt-3">URL</h5>
                           <p class="pe-5">{{ pub.publication_url }}</p>
@@ -46,7 +46,7 @@
                         </div>
                         {% endif %}
                     <div class="w-100"></div>
-                    </div> </a>
+                    </div>
                     <hr/>
                 {% endfor %}
               {% else %}
