--- a/frontend/templates/home/django-material-kit/publications.html
+++ b/frontend/templates/home/django-material-kit/publications.html
@@ -40,7 +40,10 @@
                           <p class="pe-5">{{ pub.publication_url }}</p>
                         </div>
 
-
+                        <div class="col">
+                            <h5 class="font-weight-bolder mt-3">Affiliated Projects</h5>
+                            <p class="pe-5">{{ pub.project_names.project_label|join: ", " }}</p>
+                        </div>
 
                     <div class="w-100"></div>
                     </div>
