updated template in frontend

--- a/frontend/templates/home/django-material-kit/publications.html
+++ b/frontend/templates/home/django-material-kit/publications.html
@@ -42,7 +42,7 @@
 
                         <div class="col">
                             <h5 class="font-weight-bolder mt-3">Affiliated Projects</h5>
-                            <p class="pe-5">{{ pub.project_names.project_label.all|join:", " }}</p>
+                            <p class="pe-5">{{ pub.project_names.all|join:", " }}</p>
                         </div>
 
                     <div class="w-100"></div>
