updated template in frontend

--- a/frontend/templates/home/django-material-kit/publications.html
+++ b/frontend/templates/home/django-material-kit/publications.html
@@ -31,24 +31,27 @@
         <!-- -------- START Grids -------- -->
           <div class="container">
             <!-- -------- START loop -------- -->
-
+              {% if pub_list %}
                 {% for pub in pub_list %}
-                    <h3>{{ pub.publication_title }}</h3>
+                    <h5 class="font-weight-bolder mt-3">{{ pub.publication_title }}</h5>
                     <div class="row">
                         <div class="col">
                             <h5 class="font-weight-bolder mt-3">URL</h5>
                           <p class="pe-5">{{ pub.publication_url }}</p>
                         </div>
-
+                        {% if pub.project_names.all %}
                         <div class="col">
                             <h5 class="font-weight-bolder mt-3">Affiliated Projects</h5>
                             <p class="pe-5">{{ pub.project_names.all|join:", " }}</p>
                         </div>
-
+                        {% endif %}
                     <div class="w-100"></div>
                     </div>
                     <hr/>
                 {% endfor %}
+            {% else %}
+            <p class="pe-5">No publications are available.</p>
+            {% endif %}
 
 
             <!-- -------- END loop -------- -->
